# Netology-Homeworks

./: .gitignore
1. Модуль основы/ДЗ курсу основы/: NetologyHW_10.cpp  NetologyHW_9.cpp
1. Модуль основы/ДЗ курсу основы/HW_11/HW_11_1/: HW_11_1.sln
1. Модуль основы/ДЗ курсу основы/HW_11/HW_11_2/: HW_11_2.sln
1. Модуль основы/ДЗ курсу основы/HW_11/LessonString/: LessonString.sln
1. Модуль основы/ДЗ курсу основы/HW_12/HW_12-1/: HW_12-1.sln
1. Модуль основы/ДЗ курсу основы/HW_9_2/: HW_9_2.sln
5. Advanced Programming/5. Term project/Term-project-5/: Term-project-5.sln
5. Advanced Programming/5.1. Новшества С++/домашние задания/: Текстовый документ.txt
5. Advanced Programming/5.4. Testing/: Воппросы.txt
5. Advanced Programming/5.4. Testing/example/: CMakeLists.txt  Factorial.cpp  main.cpp  test-main.cpp  test_example.cpp  test_example.vcxproj
5. Advanced Programming/5.4. Testing/домашние задания/homework 5-4-1/: CMakeLists.txt  DoubleLinkedList.h  homework-5-4.cpp  test_homework-5-4.cpp
6. Databases/домашние задания/ДЗ1/: Документ1.vsdx
6.Databases/homeworks/HW5/: вопрос по дз.txt
6.Databases/homeworks/HW5/MyDataBaseHomeWork/: CMakeLists.txt  data_base.cpp  data_base.h  main.cpp  user_interface.cpp  user_interface.h
7. Multithread and async/homeworks/lesson_4/HW1/: CMakeLists.txt  main.cpp  shape.cpp  shape.h  test-main.cpp  transform.cpp
7. Multithread and async/homeworks/term_project/: term-project-module-7.sln
9. Qt/homeworks/hw2/HW2/: CMakeLists.txt  main.cpp
9. Qt/homeworks/hw4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
9. Qt/homeworks/hw5/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
9. Qt/homeworks/hw6/: CMakeLists.txt  ExampleRace.h  mainwindow.cpp  mainwindow.h
9. Qt/homeworks/hw7/: CMakeLists.txt  chartform.cpp  chartform.h  chartform.ui  graphicchart.cpp  graphicchart.h  mainwindow.cpp  mainwindow.h
9. Qt/homeworks/hw9/: UdpWorker.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp
(+330 files in other folders)
